# 3-microservices-running-on-aws-infrastructure

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  docker-compose.yml  first-prompt-en.md  first-prompt-es.md  first-propmt-es.md  mcp.json  obisidan-notes.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
.claude/: settings.json
.claude/agents/: events-pipeline-impl.md  github-ops.md  infra-impl.md  linear-pm.md  obsidian-vault.md  orders-impl.md  solutions-architect.md  tracking-impl.md  users-impl.md
docs/00-overview/: adrs.base  architecture.md  glossary.md  index.md  runbooks.base  specs.base  system-context.md
docs/lessons/: 2026-07-12-prisma-lazy-promise-als.md  drawio-diagram-legibility.md  floci-rds-apigw-limits.md  floci-storage-modes-and-tmp-corruption.md  floci-vs-ministack-spike-findings.md  ministack-auth-chain-spike-findings.md  signoz-selfhost-migrator-blocker.md
docs/plans/: developer-experience-milestone.md  documentation-vault-milestone.md  index.md  orders-service-milestone.md  services-infra-scaffold-milestone.md  users-service-milestone.md
docs/templates/: adr-template.md  convention-template.md  lesson-template.md  plan-template.md  (+4 more)
e2e/: package.json  playwright.config.ts  tsconfig.json
infra/: .gitignore  CLAUDE.md  README.md
infra/scripts/: pyproject.toml  requirements.txt
infra/scripts/lib3mrai/: __init__.py  aws.py  console.py  db.py  envfile.py
observability/: otel-collector-config.yaml
proto/: users.proto
scripts/: drawio-to-svg.mjs  import-dashboards.mjs  validate-vault.mjs
(+393 files in other folders)
