[project]
name = "lib3mrai"
version = "0.1.0"
description = "Shared helpers for 3MRAI infrastructure scripts"
requires-python = ">=3.11"
dependencies = ["boto3>=1.34,<2"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lib3mrai*"]
